finetune mc head as well as lm head

--- a/models/GPT-2.ipynb
+++ b/models/GPT-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102336,7 +102336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -102541,7 +102541,7 @@
        ")"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102560,7 +102560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102603,11 +102603,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#retrain only final fc layer of first head for language modeling task\n",
+    "#retrain final fc layer and mc layer for language modeling task\n",
     "device = torch.device(\"cuda:0\" if (torch.cuda.is_available() and ngpu > 0) else \"cpu\")\n",
     "\n",
     "if not baseline:\n",
@@ -102618,7 +102618,8 @@
     "\n",
     "    # Parameters of newly constructed modules have requires_grad=True by default\n",
     "    model.lm_head = nn.Linear(model.lm_head.in_features, len(tokenizer))\n",
-    "\n",
+    "    model.multiple_choice_head.summary = nn.Linear(model.multiple_choice_head.summary.in_features, 1, bias=True)\n",
+    "    \n",
     "model = model.to(device)\n",
     "\n",
     "if checkpoint:\n",
@@ -102680,7 +102681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102704,7 +102705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -102713,7 +102714,7 @@
        "101735"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102730,7 +102731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -102766,7 +102767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102812,21 +102813,7 @@
      "output_type": "stream",
      "text": [
       "Starting Training Loop...\n",
-      "[0/3][0/20307]\tLoss LM: 11.6052\tLoss MC: 0.6686\tLoss total:23.2940\n",
-      "[0/3][10/20307]\tLoss LM: 14.1271\tLoss MC: 0.6611\tLoss total:28.3369\n",
-      "[0/3][20/20307]\tLoss LM: 13.3623\tLoss MC: 0.6289\tLoss total:26.8032\n",
-      "[0/3][30/20307]\tLoss LM: 14.2428\tLoss MC: 1.1610\tLoss total:28.6307\n",
-      "[0/3][40/20307]\tLoss LM: 14.0258\tLoss MC: 0.1778\tLoss total:28.0737\n",
-      "[0/3][50/20307]\tLoss LM: 13.3348\tLoss MC: 1.3046\tLoss total:26.8327\n",
-      "[0/3][60/20307]\tLoss LM: 11.5782\tLoss MC: 0.7376\tLoss total:23.2487\n",
-      "[0/3][70/20307]\tLoss LM: 12.8462\tLoss MC: 0.8662\tLoss total:25.8008\n",
-      "[0/3][80/20307]\tLoss LM: 13.5940\tLoss MC: 0.3722\tLoss total:27.2344\n",
-      "[0/3][90/20307]\tLoss LM: 15.1630\tLoss MC: 1.1157\tLoss total:30.4656\n",
-      "[0/3][100/20307]\tLoss LM: 13.4891\tLoss MC: 0.8020\tLoss total:27.0784\n",
-      "[0/3][110/20307]\tLoss LM: 15.5703\tLoss MC: 0.5225\tLoss total:31.2059\n",
-      "[0/3][120/20307]\tLoss LM: 13.7024\tLoss MC: 0.3944\tLoss total:27.4541\n",
-      "[0/3][130/20307]\tLoss LM: 14.2050\tLoss MC: 0.8104\tLoss total:28.5114\n",
-      "[0/3][140/20307]\tLoss LM: 12.5070\tLoss MC: 0.5584\tLoss total:25.0838\n"
+      "[0/3][0/20307]\tLoss LM: 13.4884\tLoss MC: 2.7773\tLoss total:27.3239\n"
      ]
     }
    ],
@@ -102862,7 +102849,7 @@
     "            optimizer.zero_grad()\n",
     "        \n",
     "        # Output training stats\n",
-    "        if i % 10 == 0:\n",
+    "        if i % 50 == 0:\n",
     "            print('[%d/%d][%d/%d]\\tLoss LM: %.4f\\tLoss MC: %.4f\\tLoss total:%.4f'\n",
     "                  % (epoch, num_epochs, i, len(train_loader),\n",
     "                     lm_loss.item(), mc_loss.item(), total_loss.item()))\n",
